worktree/build_output.txt
    Checking worktree v0.4.0 (/Users/justinsmith/Projects/test/worktrees-hub/dev/worktree)
error[E0308]: mismatched types
   --> worktree/src/app/view.rs:416:41
    |
416 | ...                   path,
    |                       ^^^^ expected `String`, found `&mut String`
    |
help: try using a conversion method
    |
416 |                                         path: path.to_string(),
    |                                         +++++     ++++++++++++

error[E0027]: pattern does not mention field `stashes`
   --> worktree/src/app/view.rs:487:40
    |
487 |   ...   if let AppState::ViewingStashes {
    |  ______________^
488 | | ...       path,
489 | | ...       branch,
490 | | ...       selected_index,
491 | | ...       prev_state: inner_prev,
492 | | ...   } = state
    | |_______^ missing field `stashes`
    |
help: include the missing field in the pattern
    |
491 -                                     prev_state: inner_prev,
492 -                                 } = state
491 +                                     prev_state: inner_prev, stashes } = state
    |
help: if you don't care about this missing field, you can explicitly ignore it
    |
491 -                                     prev_state: inner_prev,
492 -                                 } = state
491 +                                     prev_state: inner_prev, stashes: _ } = state
    |
help: or always ignore missing fields here
    |
491 -                                     prev_state: inner_prev,
492 -                                 } = state
491 +                                     prev_state: inner_prev, .. } = state
    |

error[E0004]: non-exhaustive patterns: `AppState::LoadingStashes { .. }`, `AppState::StashAction { .. }`, `AppState::Staging { .. }` and 4 more not covered
   --> worktree/src/app/cli_renderer.rs:79:15
    |
 79 |         match state {
    |               ^^^^^ patterns `AppState::LoadingStashes { .. }`, `AppState::StashAction { .. }`, `AppState::Staging { .. }` and 4 more not covered
    |
note: `AppState` defined here
   --> worktree/src/app/model.rs:122:10
    |
122 | pub enum AppState {
    |          ^^^^^^^^
...
233 |     LoadingStashes {
    |     -------------- not covered
...
239 |     StashAction {
    |     ----------- not covered
...
270 |     Staging {
    |     ------- not covered
...
275 |     Unstaging {
    |     --------- not covered
...
280 |     SwitchingBranchTask {
    |     ------------------- not covered
    = note: the matched value is of type `AppState`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown, or multiple match arms
    |
246 ~             },
247 +             _ => todo!()
    |

Some errors have detailed explanations: E0004, E0027, E0308.
For more information about an error, try `rustc --explain E0004`.
error: could not compile `worktree` (lib) due to 3 previous errors
